<resources>
    <string name="app_name">VideoXie</string>

    <string name="network_error">当前网络不可用！</string>
    <string name="system_loading">加载中，请稍候。</string>

    <!--MainActivity-->
    <string name="activity_main_patrol">巡检消息</string>
    <string name="activity_main_police">报警消息</string>
    <string name="activity_main_device">设备</string>
    <string name="activity_main_exit">退出登录</string>
    <string name="activity_main_add">添加用户</string>
    <string name="activity_main_about">关于</string>

    <!--LoginActivity-->
    <string name="activity_login_name_tips">用户名</string>
    <string name="activity_login_pwd_tips">密码</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_register">立即注册</string>
    <string name="activity_login_third">第三方登录</string>
    <string name="activity_login_qq">QQ</string>
    <string name="activity_login_wechat">微信</string>
    <string name="activity_login_ali">支付宝</string>
    <string name="activity_login_reset">忘记密码</string>

    <string name="activity_register_user_id_tips">请输入用户名（纯英文）</string>
    <string name="activity_register_user_name_tips">请输入用户昵称</string>
    <string name="activity_register_department_tips">请选择用户所在部门</string>
    <string name="activity_register_power_tips">请输入用户职位</string>
    <string name="activity_register_phone_tips">请输入电话号码</string>
    <string name="activity_register_verification_tips">请输入验证码</string>
    <string name="activity_register_pwd_tips">请输入密码</string>
    <string name="activity_register_pwd_confirm_tips">请再次输入密码确认</string>
    <string name="activity_register_verification">获取验证码</string>
    <string name="activity_register_sure">添加用户</string>
    <string name="activity_register_user_protocol">用户协议</string>
    <string name="activity_register_service_provider">智慧你的生活</string>
    <string name="activity_register_copyright">Copyright© 2018智城科技有限公司</string>
    <string name="activity_register_please_protocol">请阅读用户协议</string>
    <string name="activity_register_please_verification">请输入验证码或验证码长度不足6位</string>
    <string name="activity_register_please_pwd">请输入密码或密码长度不足6位</string>
    <string name="activity_register_please_pwd_confirm">两次输入不同，请确认</string>
    <string name="activity_register_please_user_id">请输入用户名</string>
    <string name="activity_register_please_user_name">请输入用户昵称</string>
    <string name="activity_register_please_department">请选择用户所在部门</string>
    <string name="activity_register_please_phone">请输入正确的手机号</string>
    <string name="activity_register_please_sex">请选择用户性别</string>

    <string name="activity_live_title">实时视频</string>
    <string name="activity_live_record">回放</string>
    <string name="activity_live_definition_standard">标清</string>
    <string name="activity_live_definition_high">高清</string>
    <string name="activity_live_definition_super">超清</string>
    <string name="activity_live_environment">环境情况</string>
    <string name="activity_live_aqi">AQI指数</string>

    <string name="activity_record_speed">1.0x</string>
    <string name="activity_record_state">请选择下列片段回放</string>
    <string name="activity_record_failed">播放失败</string>
    <string name="activity_record_finish">播放完成</string>

    <string name="activity_device_set_info">信息更改</string>
    <string name="activity_device_clear_sd">清空SD卡</string>
    <string name="activity_device_play_real">实时</string>
    <string name="activity_device_play_record">录像</string>
    <string name="activity_device_name">设备名:</string>
    <string name="activity_device_current_name">当前设备名:</string>
    <string name="activity_device_name_title">修改设备信息</string>
    <string name="activity_device_name_tips">请输入新设备名</string>
    <string name="activity_device_commit">提交</string>

    <string name="dialog_password_pwd">请输入解密密码</string>
    <string name="dialog_password_cancel">取消</string>
    <string name="dialog_password_sure">确定</string>
    <string name="dialog_sd_clean">是否清空该设备SD卡数据</string>
    <string name="dialog_sd_tips">提示</string>

    <string name="activity_patrol_detail">巡检详情</string>

</resources>
