<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_250"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_white_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/dp_10"
    app:layout_constraintCircleRadius="@dimen/dp_10">

    <TextView
        android:id="@+id/tx_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_18"
        android:background="@drawable/shape_margin_top"
        android:text="@string/dialog_sd_clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_gray_radio"
        android:paddingBottom="@dimen/dp_6"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_6"
        android:text="@string/dialog_password_cancel"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_16"
        android:layout_marginStart="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="@+id/tx_content"
        app:layout_constraintTop_toBottomOf="@+id/tx_content" />

    <TextView
        android:id="@+id/tx_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_blue_radio"
        android:paddingBottom="@dimen/dp_6"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/dialog_password_sure"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/tx_content"
        app:layout_constraintTop_toBottomOf="@+id/tx_content" />

    <TextView
        android:id="@+id/tx_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="8dp"
        android:text="@string/dialog_sd_tips"
        android:textSize="@dimen/sp_19"
        app:layout_constraintBottom_toTopOf="@+id/tx_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tx_content" />

</android.support.constraint.ConstraintLayout>